fix: input color on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -57,10 +57,6 @@
     @apply relative h-4 w-4 appearance-none rounded-default border-default border-lightenGray outline-none transition-all checked:border-primary checked:bg-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:ml-[0.315rem] checked:after:block checked:after:h-[0.8125rem] checked:after:w-[0.375rem] checked:after:rotate-45 checked:after:border-[0.125rem] checked:after:border-l-0 checked:after:border-t-0 checked:after:border-solid checked:after:border-white checked:after:bg-transparent checked:after:content-[''] hover:cursor-pointer dark:border-darkTextGray md:h-[1.125rem] md:w-[1.125rem];
   }
 
-  .default-input-text {
-    @apply w-full rounded-sm border-default bg-lightGray p-2 outline-none active:bg-white disabled:text-lightenGray dark:border-dark dark:bg-darkInputBackground dark:text-darkTextLight dark:placeholder:text-darkTextGray disabled:dark:text-darkTextGray;
-  }
-
   .translucid {
     background-color: rgba(255, 255, 255, 0.5);
     -webkit-backdrop-filter: blur(10px);
@@ -79,7 +75,7 @@ aside.EmojiPickerReact.epr-main {
 
 /* quill input text */
 .ql-editor {
-  @apply max-h-64 rounded-b-md bg-lightGray p-2 text-sm outline-none focus:bg-white disabled:text-lightenGray dark:border-dark dark:bg-darkInputBackground dark:text-darkTextLight disabled:dark:text-darkTextGray md:text-base;
+  @apply max-h-64 rounded-b-md bg-lightGray p-2 text-sm outline-none transition-colors focus:bg-white disabled:text-lightenGray dark:border-dark dark:bg-darkInputBackground dark:text-darkTextLight dark:focus:bg-darkBackgroundIconButton disabled:dark:text-darkTextGray md:text-base;
 }
 
 /* quill toolbar */
